--- a/page_analyzer/templates/layout.html
+++ b/page_analyzer/templates/layout.html
@@ -35,10 +35,10 @@
         </div>
     </main>
 
-    <footer class=" border-top mt-5">
+    <footer class="border-top py-3 mt-5 flex-shrink-0">
         <div class="container-lg">
             <div class="text-center">
-                <a href="#"> hexlet</a>
+                <a href="#">Hexlet</a>
             </div>
         </div>
     </footer>
