--- a/page_analyzer/templates/show.html
+++ b/page_analyzer/templates/show.html
@@ -7,7 +7,7 @@
 {% block main %}
     <h1>{{url.name}}</h1>
     <div class="table-responsive">
-        <table class="table table-bordered table-hover text-nowrap">
+        <table data-test="url" class="table table-bordered table-hover text-nowrap">
             <tr>
                 <td>ID</td>
                 <td>{{url.id}}</td>
