--- a/page_analyzer/templates/urls.html
+++ b/page_analyzer/templates/urls.html
@@ -8,7 +8,7 @@
 {%block main%}
 <h1 class="h1">Сайты</h1>
 <div  class="table-responsive">
-    <table class="table table-bordered table-hover text-nowrap">
+    <table data-test="urls" class="table table-bordered table-hover text-nowrap">
         <thead>
            <tr>
             <th>ID</th>
@@ -20,9 +20,12 @@
         <tbody>
             {%if urls%}
                 {%for url in urls%}
-                    <tr>
-                        <td>{{url.id}}</td>
-                    </tr>
+                   <tr>
+                    <td>{{ url.id }}</td>
+                    <td><a href="{{ url_for('url_show', id_=url.id) }}">{{ url.name }}</a></td>
+                    <td>{{ url.last_check if url.last_check is not none }}</td>
+                    <td>{{ url.status_code if url.status_code is not none }}</td>
+                </tr>
                 {%endfor%}
             {%endif%}
         </tbody>
