--- a/page_analyzer/templates/urls.html
+++ b/page_analyzer/templates/urls.html
@@ -1,34 +1,31 @@
-{% extends 'layout.html'%}
+{% extends 'layout.html' %}
 
-{% block title%}
-Анализатор страниц - Сайты
-{%endblock%}
+{% block title %}
+    Анализатор страниц - Сайты
+{% endblock %}
 
-
-{%block main%}
-<h1 class="h1">Сайты</h1>
-<div  class="table-responsive">
-    <table data-test="urls" class="table table-bordered table-hover text-nowrap">
-        <thead>
-           <tr>
-            <th>ID</th>
-            <th>Имя</th>
-            <th>Последняя проверка</th>
-            <th>Код ответа</th>
-           </tr>
-        </thead>
+{% block main %}
+<h1>Sites</h1>
+<div class="table-responsive">
+    <table class="table table-bordered table-hover text-nowrap" data-test="urls">
         <tbody>
-            {%if urls%}
-                {%for url in urls%}
-                   <tr>
+            <tr>
+                <th>ID</th>
+                <th>Имя</th>
+                <th>Последняя проверка</th>
+                <th>Код ответа</th>
+            </tr>
+            {% if urls %}
+                {% for url in urls %}
+                <tr>
                     <td>{{ url.id }}</td>
                     <td><a href="{{ url_for('url_show', id_=url.id) }}">{{ url.name }}</a></td>
                     <td>{{ url.last_check if url.last_check is not none }}</td>
                     <td>{{ url.status_code if url.status_code is not none }}</td>
                 </tr>
-                {%endfor%}
-            {%endif%}
+                {% endfor %}
+            {% endif %}
         </tbody>
     </table>
 </div>
-{%endblock%}
+{% endblock %}
