--- a/page_analyzer/templates/urls.html
+++ b/page_analyzer/templates/urls.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-<h1>Sites</h1>
+<h1>Сайты</h1>
 <div class="table-responsive">
     <table class="table table-bordered table-hover text-nowrap" data-test="urls">
         <tbody>
